//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message StorageDirectoryIndex {
  bytes             ID             =1;  //文件夹唯一ID采用全局自增长ID
  bytes             ParentID       =2;  //父文件夹ID
  string            Name           =3;  //文件夹名称
  repeated  bytes   Dirs           =4;  //文件夹中包含文件夹
  repeated  bytes   Files          =5;  //文件列表
  bytes             UserAddr       =6;  //用户地址
}

